cmake_minimum_required(VERSION 3.27)
project(sequences_continue)

set(CMAKE_CXX_STANDARD 17)

add_executable(sequences_continue main.cpp)
add_executable(pointer_cmd sqrtcmdline.cpp)
add_executable(ssrfarray stdarray.cpp)
add_executable(primes fasterprimes.cpp)
add_executable(primes2 fasterprimes2.cpp)
add_executable(exercise1 mixture.cpp)
add_executable(exercise2 negative.cpp)
add_executable(exercise3 testy.cpp)
add_executable(exercise4 declarations.cpp)
add_executable(exercise5 legal_illegal.cpp)
add_executable(exercise6 contains_numbers.cpp)
add_executable(exercise10 positive_values.cpp)
add_executable(exercise11 even_values.cpp)
add_executable(exercise12 2d_vector_even_values.cpp)
add_executable(exercise13 compares_vectors.cpp)
add_executable(exercise14 contains_values.cpp)
add_executable(exercise15 size_function.cpp)
add_executable(exercise16 expressions_vector.cpp)
add_executable(exercise17 amount_elements.cpp)
add_executable(exercise18 static_dynamic.cpp)